--- a/package.json
+++ b/package.json
@@ -12,13 +12,12 @@
   "author": "OutlawPlz",
   "license": "GPL-3.0",
   "devDependencies": {
+    "breakpoint-sass": "^2.7.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-cssnano": "^2.1.2",
-    "gulp-jshint": "^2.0.0",
     "gulp-minify": "0.0.11",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.1",
-    "jshint": "^2.9.2"
   }
 }
