--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "riccio",
-  "version": "1.0.2",
-  "description": "Adaptive view grid with expanding info box for lazy people.",
+  "version": "1.0.3",
+  "description": "Adaptive grid view with expanding info box.",
   "main": "index.js",
   "directories": {
     "test": "test"
@@ -15,9 +15,10 @@
     "breakpoint-sass": "^2.7.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-concat": "^2.6.0",
     "gulp-cssnano": "^2.1.2",
     "gulp-minify": "0.0.11",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.3.1",
+    "gulp-sass": "^2.3.1"
   }
 }
