--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "breakpoint-sass": "^2.7.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-clean-css": "^3.0.3",
     "gulp-concat": "^2.6.0",
-    "gulp-cssnano": "^2.1.2",
-    "gulp-minify": "0.0.11",
+    "gulp-header": "^1.8.8",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.3.1"
-  }
+    "gulp-sass": "^2.3.1",
+    "gulp-uglify": "^2.1.0"
+  },
+  "dependencies": {}
 }
